# power-switch-pro-mcp

./: .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
docs/: conf.py  index.rst
docs/api/: http_server.rst  server.rst
hooks/: install.sh  pre-push
scripts/: README.md  setup_ecowitt_autoping.py
src/power_switch_pro_mcp/: __init__.py  http_server.py  server.py
tests/: __init__.py  conftest.py  test_http_server.py  test_http_server_integration.py
